@@ -1,0 +1,433 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "R. Boidin, T. Halenkovič, V. Nazabal, L. Beneš, P. Němec. Pulsed laser deposited alumina thin films, <a href=\"http://dx.doi.org/10.1016/j.ceramint.2015.09.048\"><i>Ceramics International</i> <b>42</b>, 1177-1182 (2016)</a> (Numerical data kindly provided by Tomáš Halenkovič)"
+COMMENTS: "Thin films of amorphous alumina were fabricated using pulsed laser deposition in vacuum.<br>Influence of deposition parameters, specifically deposition time under vacuum and partial pressure of argon, is discussed in the original publication."
+DATA:
+  - type: tabulated n
+    data: |
+        0.30 1.73756
+        0.32 1.72717
+        0.34 1.71886
+        0.36 1.71210
+        0.38 1.70652
+        0.40 1.70185
+        0.42 1.69791
+        0.44 1.69454
+        0.46 1.69164
+        0.48 1.68912
+        0.50 1.68691
+        0.52 1.68496
+        0.54 1.68324
+        0.56 1.68169
+        0.58 1.68031
+        0.60 1.67906
+        0.62 1.67792
+        0.64 1.67689
+        0.66 1.67594
+        0.68 1.67507
+        0.70 1.67427
+        0.72 1.67353
+        0.74 1.67283
+        0.76 1.67219
+        0.78 1.67158
+        0.80 1.67101
+        0.82 1.67047
+        0.84 1.66996
+        0.86 1.66948
+        0.88 1.66902
+        0.90 1.66858
+        0.92 1.66816
+        0.94 1.66776
+        0.96 1.66737
+        0.98 1.66699
+        1.00 1.66663
+        1.02 1.66628
+        1.04 1.66594
+        1.06 1.66561
+        1.08 1.66528
+        1.10 1.66496
+        1.12 1.66465
+        1.14 1.66435
+        1.16 1.66405
+        1.18 1.66376
+        1.20 1.66347
+        1.22 1.66318
+        1.24 1.66290
+        1.26 1.66262
+        1.28 1.66234
+        1.30 1.66207
+        1.32 1.66180
+        1.34 1.66152
+        1.36 1.66125
+        1.38 1.66099
+        1.40 1.66072
+        1.42 1.66045
+        1.44 1.66019
+        1.46 1.65992
+        1.48 1.65965
+        1.50 1.65939
+        1.52 1.65912
+        1.54 1.65886
+        1.56 1.65859
+        1.58 1.65832
+        1.60 1.65805
+        1.62 1.65778
+        1.64 1.65751
+        1.66 1.65724
+        1.68 1.65697
+        1.70 1.65670
+        1.72 1.65642
+        1.74 1.65615
+        1.76 1.65587
+        1.78 1.65559
+        1.80 1.65531
+        1.82 1.65503
+        1.84 1.65475
+        1.86 1.65446
+        1.88 1.65418
+        1.90 1.65389
+        1.92 1.65360
+        1.94 1.65330
+        1.96 1.65301
+        1.98 1.65271
+        2.00 1.65241
+        2.02 1.65211
+        2.04 1.65181
+        2.06 1.65150
+        2.08 1.65120
+        2.10 1.65089
+        2.12 1.65057
+        2.14 1.65026
+        2.16 1.64994
+        2.18 1.64962
+        2.20 1.64930
+        2.22 1.64898
+        2.24 1.64865
+        2.26 1.64832
+        2.28 1.64799
+        2.30 1.64765
+        2.3188 1.64733
+        2.3398 1.64698
+        2.3568 1.64669
+        2.3784 1.64632
+        2.3960 1.64601
+        2.4183 1.64562
+        2.4365 1.64530
+        2.4596 1.64489
+        2.4784 1.64455
+        2.4975 1.64420
+        2.5169 1.64385
+        2.5366 1.64349
+        2.5567 1.64312
+        2.5770 1.64274
+        2.5976 1.64235
+        2.6186 1.64195
+        2.6400 1.64155
+        2.6562 1.64123
+        2.6782 1.64081
+        2.6949 1.64048
+        2.7175 1.64004
+        2.7347 1.63970
+        2.7579 1.63923
+        2.7756 1.63887
+        2.7996 1.63839
+        2.8179 1.63801
+        2.8364 1.63763
+        2.8551 1.63724
+        2.8741 1.63685
+        2.8998 1.63630
+        2.9194 1.63589
+        2.9393 1.63546
+        2.9594 1.63503
+        2.9798 1.63458
+        2.9936 1.63428
+        3.0145 1.63382
+        3.0357 1.63335
+        3.0571 1.63287
+        3.0789 1.63238
+        3.0936 1.63205
+        3.1159 1.63153
+        3.1386 1.63101
+        3.1538 1.63066
+        3.1770 1.63012
+        3.1927 1.62975
+        3.2164 1.62918
+        3.2325 1.62880
+        3.2569 1.62821
+        3.2733 1.62781
+        3.2983 1.62720
+        3.3152 1.62679
+        3.3322 1.62636
+        3.3581 1.62572
+        3.3756 1.62528
+        3.3933 1.62483
+        3.4111 1.62437
+        3.4383 1.62368
+        3.4566 1.62320
+        3.4751 1.62272
+        3.4939 1.62223
+        3.5128 1.62172
+        3.5320 1.62122
+        3.5513 1.62070
+        3.5709 1.62017
+        3.5907 1.61963
+        3.6107 1.61908
+        3.6309 1.61853
+        3.6513 1.61796
+        3.6720 1.61738
+        3.6930 1.61679
+        3.7141 1.61619
+        3.7355 1.61558
+        3.7572 1.61496
+        3.7791 1.61432
+        3.7901 1.61400
+        3.8124 1.61335
+        3.8350 1.61268
+        3.8578 1.61200
+        3.8693 1.61165
+        3.8926 1.61095
+        3.9161 1.61024
+        3.9399 1.60951
+        3.9519 1.60914
+        3.9762 1.60839
+        3.9884 1.60800
+        4.0131 1.60723
+        4.0381 1.60644
+        4.0507 1.60603
+        4.0762 1.60522
+        4.0890 1.60480
+        4.1150 1.60396
+        4.1281 1.60353
+        4.1546 1.60266
+        4.1679 1.60221
+        4.1949 1.60131
+        4.2085 1.60086
+        4.2360 1.59992
+        4.2499 1.59945
+        4.2780 1.59849
+        4.2921 1.59800
+        4.3064 1.59750
+        4.3352 1.59649
+        4.3498 1.59598
+        4.3791 1.59494
+        4.3940 1.59441
+        4.4089 1.59387
+        4.4391 1.59278
+        4.4544 1.59222
+        4.4697 1.59166
+        4.4852 1.59109
+        4.5165 1.58993
+        4.5323 1.58933
+        4.5482 1.58874
+        4.5642 1.58813
+        4.5965 1.58690
+        4.6129 1.58627
+        4.6294 1.58563
+        4.6460 1.58498
+        4.6795 1.58367
+        4.6965 1.58300
+        4.7136 1.58232
+        4.7308 1.58163
+        4.7481 1.58093
+        4.7655 1.58023
+        4.7831 1.57951
+        4.8187 1.57805
+        4.8367 1.57731
+        4.8548 1.57655
+        4.8730 1.57579
+        4.8914 1.57501
+        4.9100 1.57423
+        4.9286 1.57343
+        4.9474 1.57262
+        4.9664 1.57180
+        4.9855 1.57097
+        5.0047 1.57013
+        5.0241 1.56928
+        5.0437 1.56841
+        5.0634 1.56753
+        5.0832 1.56664
+        5.1033 1.56573
+        5.1234 1.56482
+        5.1438 1.56388
+        5.1643 1.56294
+        5.1849 1.56198
+        5.2057 1.56100
+        5.2267 1.56002
+        5.2479 1.55901
+        5.2692 1.55799
+        5.2907 1.55696
+        5.3124 1.55591
+        5.3343 1.55484
+        5.3563 1.55375
+        5.3785 1.55265
+        5.4009 1.55153
+        5.4235 1.55040
+        5.4463 1.54924
+        5.4693 1.54807
+        5.4925 1.54687
+        5.5159 1.54566
+        5.5394 1.54443
+        5.5632 1.54317
+        5.5872 1.54190
+        5.6114 1.54060
+        5.6358 1.53928
+        5.6604 1.53794
+        5.6852 1.53657
+        5.7103 1.53518
+        5.7355 1.53377
+        5.7610 1.53233
+        5.7867 1.53087
+        5.8127 1.52937
+        5.8389 1.52786
+        5.8653 1.52631
+        5.8919 1.52473
+        5.9188 1.52313
+        5.9460 1.52150
+        5.9734 1.51983
+        6.0011 1.51813
+        6.0290 1.51640
+        6.0571 1.51464
+        6.0856 1.51284
+        6.1143 1.51100
+        6.1433 1.50913
+        6.1725 1.50722
+        6.2020 1.50527
+        6.2319 1.50329
+        6.2620 1.50126
+        6.2924 1.49918
+        6.3231 1.49707
+        6.3541 1.49490
+        6.3854 1.49270
+        6.4170 1.49044
+        6.4489 1.48813
+        6.4811 1.48577
+        6.5137 1.48336
+        6.5466 1.48089
+        6.5798 1.47837
+        6.6134 1.47579
+        6.6473 1.47315
+        6.6816 1.47044
+        6.7162 1.46767
+        6.7512 1.46483
+        6.7865 1.46192
+        6.8223 1.45894
+        6.8583 1.45589
+        6.8948 1.45276
+        6.9317 1.44954
+        6.9690 1.44625
+        7.0066 1.44286
+        7.0447 1.43939
+        7.0832 1.43582
+        7.1221 1.43216
+        7.1615 1.42839
+        7.2013 1.42452
+        7.2415 1.42054
+        7.2822 1.41644
+        7.3233 1.41223
+        7.3649 1.40789
+        7.4070 1.40342
+        7.4496 1.39882
+        7.4926 1.39408
+        7.5362 1.38919
+        7.5803 1.38414
+        7.6249 1.37893
+        7.6700 1.37356
+        7.7156 1.36801
+        7.7618 1.36227
+        7.8086 1.35634
+        7.8559 1.35021
+        7.9038 1.34386
+        7.9523 1.33728
+        8.0014 1.33047
+        8.0511 1.32340
+        8.1014 1.31607
+        8.1524 1.30846
+        8.2040 1.30055
+        8.2562 1.29233
+        8.3091 1.28377
+        8.3628 1.27485
+        8.4171 1.26556
+        8.4721 1.25586
+        8.5278 1.24573
+        8.5843 1.23514
+        8.6415 1.22405
+        8.6995 1.21243
+        8.7583 1.20023
+        8.8179 1.18742
+        8.8783 1.17394
+        8.9395 1.15975
+        9.0016 1.14477
+        9.0645 1.12895
+        9.1284 1.11222
+        9.1931 1.09450
+        9.2588 1.07570
+        9.3254 1.05574
+        9.3930 1.03453
+        9.4615 1.01195
+        9.5311 0.98791
+        9.6017 0.96230
+        9.6733 0.93501
+        9.7461 0.90598
+        9.8199 0.87515
+        9.8949 0.84254
+        9.9710 0.80828
+        10.048 0.77268
+        10.127 0.73636
+        10.207 0.70035
+        10.288 0.66616
+        10.370 0.63567
+        10.453 0.61080
+        10.538 0.59289
+        10.625 0.58242
+        10.713 0.57913
+        10.802 0.58231
+        10.893 0.59116
+        10.985 0.60493
+        11.079 0.62301
+        11.174 0.64491
+        11.272 0.67024
+        11.370 0.69870
+        11.471 0.73004
+        11.573 0.76407
+        11.678 0.80060
+        11.784 0.83946
+        11.892 0.88053
+        12.002 0.92365
+        12.114 0.96867
+        12.229 1.01545
+        12.345 1.06385
+        12.464 1.11369
+        12.585 1.16482
+        12.708 1.21708
+        12.834 1.27028
+        12.962 1.32423
+        13.093 1.37875
+        13.227 1.43366
+        13.363 1.48873
+        13.502 1.54378
+        13.645 1.59860
+        13.790 1.65299
+        13.938 1.70675
+        14.089 1.75969
+        14.244 1.81159
+        14.403 1.86229
+        14.564 1.91161
+        14.730 1.95938
+        14.899 2.00542
+        15.072 2.04962
+        15.250 2.09184
+        15.431 2.13195
+        15.617 2.16987
+        15.808 2.20551
+        16.003 2.23881
+        16.203 2.26973
+        16.408 2.29825
+        16.618 2.32436
+        16.834 2.34808
+        17.056 2.36943
+        17.283 2.38848
+        17.517 2.40530
+        17.757 2.41997
+        18.003 2.43259
