@@ -2,9 +2,14 @@
 # refractiveindex.info database is in the public domain
 # copyright and related rights waived via CC0 1.0
 
-REFERENCES: "E. R. Peck and B. N. Khanna. Dispersion of Nitrogen, <a href=\"http://dx.doi.org/10.1364/JOSA.56.001059\"><i>J. Opt. Soc. Am.</i> <b>56</b>, 1059-1063 (1963)</a>"
-COMMENTS: "15 °C."
+REFERENCES: "E. R. Peck and B. N. Khanna. Dispersion of Nitrogen, <a href=\"http://dx.doi.org/10.1364/JOSA.56.001059\"><i>J. Opt. Soc. Am.</i> <b>56</b>, 1059-1063 (1966)</a>"
+COMMENTS: "15 °C, 1 bar"
 DATA:
   - type: formula 6
     range: 0.4679 2.0586
     coefficients: 6.497378E-5 3.0738649E-2 144
+INFO:
+    n_is_absolute: true
+    λ_is_vacuum: true
+    temperature: 15 °C
+    pressure: 1 bar
